# django-dublincore-resource

./: README.md  pyproject.toml
dublincore_resource/: __init__.py  admin.py  apps.py  models.py  settings.py
dublincore_resource/migrations/: 0001_initial.py  0002_auto_20191211_0113.py  0002_dublincoreresource_attachment.py  0003_auto_20191201_0115.py  0003_auto_20191211_1449.py  0004_auto_20191201_0129.py  0004_auto_20191211_1917.py  0005_auto_20191201_0157.py  0005_auto_20200727_1227.py  0006_dublincoreresource_type.py  0007_dublincoreresource_language.py  0008_auto_20191203_0214.py  0009_auto_20191203_0254.py  0010_auto_20191203_1815.py
