[tool.poetry]
name = "django-dublincore-resource"
version = "0.1.2"
description = "Describe your resources with a Dublin Core schema"
authors = ["geoffroy-noel-ddh <geoffroy.noel@kcl.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kingsdigitallab/django-dublincore-resource"
repository = "https://github.com/kingsdigitallab/django-dublincore-resource"
keywords = ["dublin-core", "controlled-vocabulary", "linked-data", "vocabulary", "metadata"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django :: 2.2",
  "Operating System :: OS Independent",
]
include = [
  "LICENSE",
]
packages = [
  {include = "dublincore_resource"}
]

[tool.poetry.dependencies]
python = "^3.5"
django = "^2.2"
django-controlled-vocabulary = "<2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
